Rewrite PlexonCrates as GUI-first 4.0 revamp